--- a/signup.css
+++ b/signup.css
@@ -64,45 +64,418 @@ p{
     width: 90%;
     height: 5vh;
 }
-@media screen and (max-width:768px){
-    #login_button{
-        margin-top: 30px;
-        border-radius: 20px;
-        width: 50%;
-        height: 4vh;
-        margin-left: 80px;
+@media screen and (max-width:280px){
+    #login_button_insignup{
+        background-color:  rgb(244, 239, 247);
+        color: white;
+        margin-top: 1px;
+        width: 200px;
     }
-    #input_field{
-        grid-template-columns: auto;
-        gap: 3%;
-        margin-top: 1%;
-      
+    #create_account{
+        color: white;
     }
-    .input{
-        height: 4vh;
-        width: 100px;
-        border-radius: 20px;
-        background-color:white;
-        padding-left: 20px;
-        margin-top: 35px; 
+    #signup_button{
+        margin-top: 210px;
     }
-    #Signup_form_div{
-        display: grid;
-        background-color: rgb(121, 45, 169);
-        gap: 00px; 
-        height: 68vh;
+    #container3{
+        justify-content: center;
+        padding-left: 13%;
+        padding-top: 13%;
     }
     #signup-form{
         background-color:white;
-        width: 400px;
-        height:80vh;
-        padding-top: 60px;
+        width: 210px;
+        height:90vh;
+        padding-top: 10px;
         border-radius: 30px;
-        margin-left:10%;
+        margin-left:7%;
         padding-left: 3%;
         margin-top: 9%;
         margin-bottom: 9%;
     }
+    p{
+        color: rgb(129, 93, 165);
+    }
+    #signup_login{
+        background-color:  rgb(121, 45, 169);
+        margin-left: 30px;
+    }
+    #Signup_form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        margin : 0px 0px 0px 0px;
+        gap: 20px; 
+        height: 90vh;
+    }
+    #input_field{
+        display: grid;
+        gap: 2%;
+        margin-top: 1%;
+    }
+    .input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 20px;
+        font-size: 14px;
+    }
+    #signup_login{
+        color: rgb(121, 45, 169) ;
+    }
+    #login_button{
+        background-color:  rgb(121, 45, 169);
+        color: white;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 90%;
+        height: 5vh;
+    }
+}
+@media screen and (min-width:360px) and (max-width:480px){
+    #login_button_insignup{
+        background-color:  rgb(244, 239, 247);
+        color: white;
+        margin-top: 1px;
+        width: 200px;
+    }
+    #create_account{
+        color: white;
+    }
+    #signup_button{
+        margin-top: 210px;
+    }
+    #container3{
+        justify-content: center;
+        padding-left: 13%;
+        padding-top: 13%;
+    }
+    #signup-form{
+        background-color:white;
+        width: 210px;
+        height:88vh;
+        padding-top: 10px;
+        border-radius: 30px;
+        margin-left:7%;
+        padding-left: 13%;
+        margin-top: 9%;
+        margin-bottom: 9%;
+    }
+    p{
+        color: rgb(129, 93, 165);
+    }
+    #signup_login{
+        background-color:  rgb(121, 45, 169);
+        margin-left: 30px;
+    }
+    #Signup_form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        margin : 0px 0px 0px 0px;
+        gap: 20px; 
+        height: 90vh;
+    }
+    #input_field{
+        display: grid;
+        gap: 2%;
+        margin-top: 1%;
+    }
+    .input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 20px;
+        font-size: 14px;
+    }
+    #signup_login{
+        color: rgb(121, 45, 169) ;
+    }
+    #login_button{
+        background-color:  rgb(121, 45, 169);
+        color: white;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 90%;
+        height: 5vh;
+    }
+}
+@media screen and  (min-width:481px) and (max-width:564px){
+    #login_button_insignup{
+        background-color:  rgb(244, 239, 247);
+        color: white;
+        margin-top: 1px;
+        width: 200px;
+    }
+    #create_account{
+        color: white;
+    }
+    #signup_button{
+        margin-top: 210px;
+    }
+    #container3{
+        justify-content: center;
+        padding-left: 13%;
+        padding-top: 13%;
+    }
+    #signup-form{
+        background-color:white;
+        width: 310px;
+        height:78vh;
+        padding-top: 10px;
+        border-radius: 30px;
+        margin-left:13%;
+        padding-left: 13%;
+        margin-top: 9%;
+        margin-bottom: 9%;
+    }
+    p{
+        color: rgb(129, 93, 165);
+    }
+    #signup_login{
+        background-color:  rgb(121, 45, 169);
+        margin-left: 30px;
+    }
+    #Signup_form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        margin : 0px 0px 0px 0px;
+        gap: 20px; 
+        height: 90vh;
+      
+    }
+    #input_field{
+        display: grid;
+        margin-top: 0%;
+    }
+    .input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 20px;
+        font-size: 14px;
+        gap: 2px;
+    }
+    #signup_login{
+        color: rgb(121, 45, 169) ;
+    }
+    #login_button{
+        background-color:  rgb(121, 45, 169);
+        color: white;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 90%;
+        height: 5vh;
+    }
+}
+@media screen and  (min-width:565px) and (max-width:764px){
+    #login_button_insignup{
+        background-color:  rgb(244, 239, 247);
+        color: white;
+        margin-top: 1px;
+        width: 200px;
+    }
+    #create_account{
+        color: white;
+    }
+    #signup_button{
+        margin-top: 210px;
+    }
+    #container3{
+        justify-content: center;
+        padding-left: 13%;
+        padding-top: 13%;
+    }
+    #signup-form{
+        background-color:white;
+        width: 310px;
+        height:78vh;
+        padding-top: 10px;
+        border-radius: 30px;
+        margin-left:13%;
+        padding-left: 13%;
+        margin-top: 9%;
+        margin-bottom: 9%;
+    }
+    p{
+        color: rgb(129, 93, 165);
+    }
+    #signup_login{
+        background-color:  rgb(121, 45, 169);
+        margin-left: 30px;
+    }
+    #Signup_form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        margin : 0px 0px 0px 0px;
+        gap: 20px; 
+        height: 90vh;
+      
+    }
+    #input_field{
+        display: grid;
+        margin-top: 0%;
+    }
+    .input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 20px;
+        font-size: 14px;
+        gap: 2px;
+    }
+    #signup_login{
+        color: rgb(121, 45, 169) ;
+    }
+    #login_button{
+        background-color:  rgb(121, 45, 169);
+        color: white;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 90%;
+       
+}
+}
+@media screen and  (min-width:765px) and (max-width:1024px){
+    #login_button_insignup{
+        background-color:  rgb(244, 239, 247);
+        color: white;
+        margin-top: 1px;
+        width: 200px;
+    }
+    #create_account{
+        color: white;
+    }
+    #signup_button{
+        margin-top: 210px;
+    }
+    #container3{
+        justify-content: center;
+        padding-left: 13%;
+        padding-top: 13%;
+    }
+    #signup-form{
+        background-color:white;
+        width: 600px;
+        height:70vh;
+        padding-top: 100px;
+        border-radius: 30px;
+        margin-left:15%;
+        padding-left: 3%;
+        margin-top: 9%;
+        margin-bottom: 9%;
+    }
+    p{
+        color: rgb(129, 93, 165);
+    }
+    #signup_login{
+        background-color:  rgb(121, 45, 169);
+        margin-left: 30px;
+    }
+    #Signup_form_div{
+        display: flex;
+        background-color: rgb(121, 45, 169);
+        margin : 0px 100px 0px 100px;
+        gap: 200px; 
+        height: 98vh;
+    }
+    #input_field{
+        display: flex;
+        gap: 2%;
+        margin-top: 5%;
+    }
+    .input{
+        height: 5vh;
+        width: 250px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 20px;
+    }
+    #signup_login{
+        color: rgb(121, 45, 169) ;
+    }
+    #login_button{
+        background-color:  rgb(121, 45, 169);
+        color: white;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 90%;
+        height: 5vh;
+    }
 
 }
-
+@media screen and  (min-width:1025px) and (max-width:1280px){
+#login_button_insignup{
+    background-color:  rgb(244, 239, 247);
+    color: white;
+    margin-top: 1px;
+    width: 200px;
+}
+#create_account{
+    color: white;
+}
+#signup_button{
+    margin-top: 210px;
+}
+#container3{
+    justify-content: center;
+    padding-left: 13%;
+    padding-top: 13%;
+}
+#signup-form{
+    background-color:white;
+    width: 700px;
+    height:70vh;
+    padding-top: 100px;
+    border-radius: 30px;
+    margin-left:25%;
+    padding-left: 3%;
+    margin-top: 9%;
+    margin-bottom: 9%;
+}
+p{
+    color: rgb(129, 93, 165);
+}
+#signup_login{
+    background-color:  rgb(121, 45, 169);
+    margin-left: 30px;
+}
+#Signup_form_div{
+    display: flex;
+    background-color: rgb(121, 45, 169);
+    margin : 0px 100px 0px 100px;
+    gap: 200px; 
+    height: 98vh;
+}
+#input_field{
+    display: flex;
+    gap: 2%;
+    margin-top: 5%;
+}
+.input{
+    height: 5vh;
+    width: 300px;
+    border-radius: 20px;
+    border-color:  rgb(121, 45, 169);
+    background-color:white;
+    padding-left: 20px;
+}
+#signup_login{
+    color: rgb(121, 45, 169) ;
+}
+#login_button{
+    background-color:  rgb(121, 45, 169);
+    color: white;
+    margin-top: 30px;
+    border-radius: 20px;
+    width: 90%;
+    height: 5vh;
+}
+}
