--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button{
     width: 10px;
     height: 10px;
 }
-#container2{
+#intro{
     text-align: center;
     padding-left: 260px;
     padding-top: 200px;
@@ -91,82 +91,359 @@ p{
     text-underline-position: none;
 }
 
-@media screen and (max-width:768px){
-    
+@media screen and (max-width:280px){
     body{
-        overflow: hidden;
-        width: 580px;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        font-size: 15px;
-
-    }
-    #form_div{
-        display: grid;
-        gap: 1%;
-        overflow: hidden;
+        background-color: rgb(222, 215, 227);
     }
     form{
         background-color:  white;
-        width: 70px;
-        height: 290px;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        border-radius: 20px;
-        text-align: center;
-    }
-    #container2{
-        text-align: center;
-        padding-left: 0px;
-        padding-top: 00px;
         width: 400px;
+        height: 35vh;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        border-radius: 20px;
+    }
+    p{
+        color: #f1ebeb;
+    }
+    label{
+        display: grid;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        font-size: 20px;
+        padding: 2px;
+    }
+    #input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 2px;
+    }
+    div{
+        color: white;
+        margin-left: 0px;
+    }
+    button{
+        border-radius: 20px;
+        background-color: white;   
+        height: 5vh;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 145px;
+        border: none;
+        cursor: pointer;
+        margin-top:50px;
+        margin-left: 0px;
+    }
+    
+    #form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        gap: 2px; 
+        width: 260px;
+    }
+
+    #intro{
         text-align: center;
-     
-     
+        padding-left: 2%;
+        padding-top: 2px;
+        font-size: 15px;
+    }
+    h1{
+        color: white;
+    }
+    h2{
+        color: rgb(121, 45, 169);
+        text-align: center;
+        font-size: 20px;
+    }
+    h3{
+        text-align: center;
+        color: white;
+    }
+    #login_form{
+        margin-left: -0px;
+        margin-right: 0px;
+        padding: 100px;
+        width: 60px;
+        padding-top: 0px;
+        height: 200px;
+        
     }
     #login_button{
-        background-color:  rgb(121, 45, 169);
+        margin-bottom: 20px;
+        margin-right: 80px;
+    }
+    p{
+        color: rgb(227, 218, 233);
+    }
+}
+@media screen and (min-width:360px) and (max-width:480px){
+    body{
+        background-color: rgb(222, 215, 227);
+    }
+    form{
+        background-color:  white;
+        width: 300px;
+        height: 30vh;
+        margin-top: 1px;
+        margin-bottom: 2px;
+        border-radius: 20px;
+    }
+    p{
+        color: #f1ebeb;
+    }
+    label{
+        display: grid;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        font-size: 20px;
+        padding: 2px;
+        padding-right: 20px;
+    }
+    #input{
+        height: 3vh;
+        width: 130px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 2px;
+        font-size: 15px;
+    }
+    div{
         color: white;
-        margin-bottom: 30px;
+        margin-left: 0px;
+    }
+    button{
+        border-radius: 20px;
+        background-color: white;   
+        height: 5vh;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 145px;
+        border: none;
+        cursor: pointer;
+        margin-top:50px;
+        margin-left: 0px;
+    }
+    
+    #form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        gap: 2px; 
+        width: 260px;
 
     }
-button{
-    border-radius: 20px;
-    background-color: white;   
-    height: 5vh;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100px;
-    border: none;
-    cursor: pointer;
-    margin-top:100px;
-}
-#input{
-    height: 3vh;
-    width: 190px;
-    border-radius: 20px;
-    border-color:  rgb(121, 45, 169);
-    background-color:white;
-    padding-left: 20px;
-}
-#login_form{
-    margin-left: 50px;
-    margin-right: 10px;
-    padding-top: 0px;
-    padding-left: 190px;
-    padding-right: 180px;
-}
-label{
-    display: grid;
-    margin-bottom: 1px;
-    margin-top: 1px;
-    font-size: 110%;
-    padding: 5px;
 
+    #intro{
+        text-align: center;
+        padding-left: 2%;
+        padding-top: 2px;
+        font-size: 15px;
+    }
+    h1{
+        color: white;
+    }
+    h2{
+        color: rgb(121, 45, 169);
+        text-align: center;
+        font-size: 20px;
+    }
+    h3{
+        text-align: center;
+        color: white;
+    }
+    #login_form{
+        margin-left: -0px;
+        margin-right: 0px;
+        padding: 100px;
+        width: 60px; 
+        padding-top: 0px;
+        
+    }
+    #login_button{
+        margin-bottom: 2px;
+        margin-right: 80px;
+    }
+    p{
+        color: rgb(227, 218, 233);
+    }
 }
-#signup_button{
-    margin-bottom: 90px;
-}
+@media screen and (min-width:765px) and (max-width:1px){
+    body{
+        background-color: rgb(222, 215, 227);
+    }
+    form{
+        background-color:  white;
+        width: 400px;
+        height: 35vh;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        border-radius: 20px;
+    }
+    p{
+        color: #f1ebeb;
+    }
+    label{
+        display: grid;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        font-size: 20px;
+        padding: 2px;
+    }
+    #input{
+        height: 5vh;
+        width: 140px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 2px;
+    }
+    div{
+        color: white;
+        margin-left: 0px;
+    }
+    button{
+        border-radius: 20px;
+        background-color: white;   
+        height: 5vh;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 145px;
+        border: none;
+        cursor: pointer;
+        margin-top:50px;
+        margin-left: 0px;
+    }
+    
+    #form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        gap: 2px; 
+        width: 260px;
+    }
 
+    #intro{
+        text-align: center;
+        padding-left: 2%;
+        padding-top: 2px;
+        font-size: 15px;
+    }
+    h1{
+        color: white;
+    }
+    h2{
+        color: rgb(121, 45, 169);
+        text-align: center;
+        font-size: 20px;
+    }
+    h3{
+        text-align: center;
+        color: white;
+    }
+    #login_form{
+        margin-left: -0px;
+        margin-right: 0px;
+        padding: 100px;
+        width: 60px;
+        padding-top: 0px;
+        height: 200px;
+        
+    }
+    #login_button{
+        margin-bottom: 20px;
+        margin-right: 80px;
+    }
+    p{
+        color: rgb(227, 218, 233);
+    }
 }
+@media screen and (min-width:360px) and (max-width:480px){
+    body{
+        background-color: rgb(222, 215, 227);
+    }
+    form{
+        background-color:  white;
+        width: 300px;
+        height: 30vh;
+        margin-top: 1px;
+        margin-bottom: 2px;
+        border-radius: 20px;
+    }
+    p{
+        color: #f1ebeb;
+    }
+    label{
+        display: grid;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        font-size: 20px;
+        padding: 2px;
+        padding-right: 20px;
+    }
+    #input{
+        height: 3vh;
+        width: 130px;
+        border-radius: 20px;
+        border-color:  rgb(121, 45, 169);
+        background-color:white;
+        padding-left: 2px;
+        font-size: 15px;
+    }
+    div{
+        color: white;
+        margin-left: 0px;
+    }
+    button{
+        border-radius: 20px;
+        background-color: white;   
+        height: 5vh;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 145px;
+        border: none;
+        cursor: pointer;
+        margin-top:50px;
+        margin-left: 0px;
+    }
+    
+    #form_div{
+        display: grid;
+        background-color: rgb(121, 45, 169);
+        gap: 2px; 
+        width: 260px;
 
+    }
+
+    #intro{
+        text-align: center;
+        padding-left: 2%;
+        padding-top: 2px;
+        font-size: 15px;
+    }
+    h1{
+        color: white;
+    }
+    h2{
+        color: rgb(121, 45, 169);
+        text-align: center;
+        font-size: 20px;
+    }
+    h3{
+        text-align: center;
+        color: white;
+    }
+    #login_form{
+        margin-left: -0px;
+        margin-right: 0px;
+        padding: 100px;
+        width: 60px; 
+        padding-top: 0px;
+        
+    }
+    #login_button{
+        margin-bottom: 2px;
+        margin-right: 80px;
+    }
+    p{
+       
+}
+}
